Fixed CSS to avoid content overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3059,7 +3059,7 @@ body {
   max-width: 100%;
   opacity: 1;
   padding: 4.5em;
-  width: 90em;
+  width: 100%;
 }
 body.is-menu-visible #wrapper {
   opacity: 0.15;
@@ -3090,14 +3090,14 @@ body.single #wrapper {
   flex-grow: 1;
   flex: 1;
   -ms-flex: 1;
-  width: 100%;
+  min-width: 70%;
 }
 
 /* Sidebar */
 #sidebar {
   margin-right: 3em;
-  min-width: 22em;
-  width: 22em;
+  min-width: 20%;
+  width: 25%;
 }
 #sidebar > * {
   border-top: solid 1px rgba(160, 160, 160, 0.3);
