--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -10,5 +10,5 @@
 		@include vendor('flex-grow', '1');
 		flex: 1;
 		-ms-flex: 1;
-		width: 100%;
+		min-width: 70%;
 	}
