--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -8,8 +8,8 @@
 
 	#sidebar {
 		margin-right: _size(section-spacing);
-		min-width: 22em;
-		width: 22em;
+		min-width: 20%;
+		width: 25%;
 
 		> * {
 			border-top: solid 1px _palette(border);
