--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -14,7 +14,7 @@
 		max-width: 100%;
 		opacity: 1;
 		padding: (_size(section-spacing) * 1.5);
-		width: 90em;
+		width: 100%;
 
 		body.is-menu-visible & {
 			opacity: 0.15;
